# stingray_core

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  Dockerfile  README.md  build  build.sh  build_docker.sh  c  calibrate  calibrate.cpp  camera_calibration.json  d  detect_marker  detect_marker.cpp  docker_build.sh  duart  dudp  launch_rov.sh  luart  ludp  ruff.toml  run.sh  run_docker.sh  run_rov.sh  udp
configs/: .profile  (+2 more)
src/buttons_sensor/: CMakeLists.txt  package.xml
src/buttons_sensor/config/: buttons_sensor.param.yaml
src/buttons_sensor/include/display_device/: buttons_sensor.hpp
src/buttons_sensor/launch/: buttons_sensor.launch.py
src/buttons_sensor/src/: buttons_sensor.cpp  main.cpp
src/lights_node/lights_interfaces/: CMakeLists.txt  package.xml
src/parser/: CMakeLists.txt  package.xml
src/parser/include/: AH127Cprotocol.h
src/parser/launch/: ah127c_sensor.launch.py  parser.launch.py
src/parser/src/: AH127Cprotocol.cpp  main.cpp
src/stingray_config/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/stingray_config/configs/: communication.json  ros.json
src/stingray_config/launch/: rov.launch.py
src/stingray_core_communication/: CMakeLists.txt  package.xml
src/stingray_core_communication/Hydrolib-soft/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md
src/stingray_core_communication/Hydrolib-soft/.devcontainer/: Dockerfile  devcontainer.json
src/stingray_core_communication/Hydrolib-soft/.github/: CODEOWNERS
src/stingray_core_communication/Hydrolib-soft/hydrolib_acs/: CMakeLists.txt
src/stingray_core_communication/Hydrolib-soft/hydrolib_concepts/: CMakeLists.txt
src/stingray_core_communication/Hydrolib-soft/hydrolib_crc/: CMakeLists.txt
src/stingray_core_communication/Hydrolib-soft/hydrolib_filter/: CMakeLists.txt
src/stingray_core_communication/Hydrolib-soft/hydrolib_imu/: CMakeLists.txt
src/stingray_core_communication/Hydrolib-soft/hydrolib_logger/: CMakeLists.txt
src/stingray_core_communication/Hydrolib-soft/hydrolib_math/: CMakeLists.txt
src/stingray_core_communication/Hydrolib-soft/hydrolib_pid/: CMakeLists.txt
src/stingray_core_communication/Hydrolib-soft/hydrolib_pressure_sensor/: CMakeLists.txt
src/stingray_core_communication/Hydrolib-soft/hydrolib_return_codes/: CMakeLists.txt
src/stingray_core_communication/Hydrolib-soft/hydrolib_strings/: CMakeLists.txt
src/stingray_core_communication/Hydrolib-soft/hydrolib_thrust_generator/: CMakeLists.txt
src/stingray_core_communication/Hydrolib-soft/hydrolib_vectornav/: CMakeLists.txt
src/stingray_core_communication/gui_bridge/: CMakeLists.txt  package.xml
src/stingray_core_communication/gui_bridge/config/: gui_bridge_params.yaml
src/stingray_core_communication/gui_bridge/src/: gui_bridge_node.cpp
src/stingray_core_communication/include/: hardware_bridge.h  uart_driver.h  udp_driver.h
src/stingray_core_communication/include/messages/: direct.h  welt.h
src/stingray_core_communication/include/stingray_core_communication/: hardware_bridge.h  uart_driver.h  udp_driver.h
src/stingray_core_communication/launch/: devlinks_bringup.launch.py  panel_link.launch.py  power_link.launch.py  thruster_link.launch.py
src/stingray_core_communication/params/: thruster.params .yaml
src/stingray_core_communication/serial_driver/: CMakeLists.txt  README.md
src/stingray_core_communication/serial_driver/params/: example.params.yaml  test_serial.params.yaml
src/stingray_core_communication/serial_driver/src/: gpio_direction_controller.cpp  serial_bridge_node.cpp  serial_driver.cpp  serial_port.cpp
src/stingray_core_communication/serial_driver/test/: test_gpio_direction_controller.cpp  test_serial_driver.cpp  test_serial_port.cpp
src/stingray_core_communication/src/: display_driver_node.cpp  hardware_bridge.cpp  hardware_bridge_node.cpp  link_node_base.cpp  link_node_base.hpp  thrusters_driver_node.cpp  uart_driver.cpp  udp_driver.cpp  udp_driver_receiver_node.cpp  udp_driver_sender_node.cpp
src/stingray_core_communication/src/messages/: common.cpp  config.cpp  direct.cpp  normal.cpp  welt.cpp
src/stingray_core_communication/stingray_core_communication/: CMakeLists.txt  package.xml
src/stingray_core_communication/stingray_core_communication/launch/: devlinks_bringup.launch.py  modem_link.launch.py  panel_link.launch.py  pressure_link.launch.py  serial_bridge_lc.launch.py  thruster_link.launch.py
src/stingray_core_communication/stingray_core_communication/params/: modem.params.yaml  panel.params.yaml  power.params.yaml  pressure.params.yaml  thruster.params.yaml
src/stingray_core_communication/stingray_core_communication/src/: link_node_base.hpp  modem_link_node.cpp  panel_link_node.cpp  pressure_link_node.cpp  pressure_panel_link_node.cpp  pressure_panel_link_node_base.hpp  thrusters_driver_node.cpp
src/stingray_core_communication/stingray_core_communication/test/: test_link_node_base.cpp
src/stingray_core_communication/udp_driver/: CMakeLists.txt  package.xml
src/stingray_core_communication/udp_driver/params/: example_udp_params.yml
src/stingray_core_communication/udp_driver/src/: udp_bridge_node.cpp  udp_driver.cpp  udp_receiver_node.cpp  udp_sender_node.cpp  udp_socket.cpp
src/stingray_core_devices/lights_device/: CMakeLists.txt  package.xml
src/stingray_core_devices/lights_device/launch/: lights_device.launch.py
src/stingray_core_devices/lights_device/src/: lights_device.cpp  main.cpp
src/stingray_core_sensors/parser/: CMakeLists.txt  README.md
src/stingray_core_sensors/parser/msg/: Data.msg
src/stingray_interface_bridge/: CMakeLists.txt  package.xml
src/stingray_interface_bridge/launch/: stingray_interface_bridge.launch.py
src/stingray_interface_bridge/src/: bridge_node.cpp  main.cpp
src/stingray_interfaces/: CMakeLists.txt  package.xml
src/stingray_interfaces/srv/: SetStabilization.srv  SetTwist.srv
src/wika_pressure_sensor/: CMakeLists.txt  package.xml
src/wika_pressure_sensor/launch/: wika_pressure_sensor.launch.py
src/wika_pressure_sensor/src/: wika_sensor_node.cpp
(+299 files in other folders)
